--- a/styles/app.css
+++ b/styles/app.css
@@ -15,10 +15,15 @@
 	left: 0;
 	right: 0;
 	padding: 15px;
-	background-color: grey;
+	background-color: #D7D7D7;
 }
+
+
+
 .producer-details{
 	text-align: center;
+	padding: 16px;
+
 }
 
 .name{
@@ -30,6 +35,7 @@
 }
 .producer-info{
 	background-color: white;
+	
 }
 
 .producer-photo{
@@ -46,7 +52,7 @@
 .items{
 	position: absolute;
 	width: 100%;
-	top: 200px;
+	top: 184px;
 	bottom: 44px;
 	overflow: scroll;
 }
@@ -54,6 +60,12 @@
 .item{
 	height: 105px;
     width:100%;
+
+}
+
+.typeImg{
+	height: 86px;
+	width:86px;
 }
 
 footer{
@@ -84,18 +96,33 @@ footer button{
 }
 
 .three {
-    width:27%;
+    width:33%;
     display:inline-block;
     padding:10px;
     position:relative;
+    vertical-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
+.leftblock{
 
+}
 .price {
     text-align:center;
-    font-size:20pt;
+    font-size:30pt;
     font-weight:bold;
+    margin-top: 40px;
+    float: left;
+    padding: 0px;
+    margin-top: 28px;
+
 }
 
+.sort {
+	text-align: center;
+	padding: 0px;
+	margin-top: 3px;
+}
 .check {
     text-align:center;
     font-size:20pt;
