--- a/styles/app.css
+++ b/styles/app.css
@@ -35,7 +35,7 @@ body{
 	position: absolute;
 	left: 0;
 	right: 0;
-	padding: 15px;
+	padding: 9px;
 	background-color: #D7D7D7;
 }
 
@@ -73,15 +73,19 @@ body{
 .items{
 	position: absolute;
 	width: 100%;
-	top: 184px;
+	top: 164px;
 	bottom: 44px;
 	overflow: scroll;
 }
 
 .item{
-	height: 105px;
+	height: 155px;
     width:100%;
-
+    background-repeat: no-repeat;
+	background-clip: content-box;
+	background-size: cover;
+	margin-bottom: 2px;
+	position: relative;
 }
 
 .typeImg{
@@ -154,7 +158,7 @@ p{
 	margin: 0 10%;
 }
 
-.three {
+/*.three {
     width:33%;
     display:inline-block;
     padding:10px;
@@ -162,18 +166,22 @@ p{
     vertical-align: center;
     margin-left: auto;
     margin-right: auto;
-}
+}*/
 .leftblock{
 
 }
 .price {
-    text-align:center;
-    font-size:30pt;
-    font-weight:bold;
-    margin-top: 40px;
-    float: left;
-    padding: 0px;
-    margin-top: 28px;
+    text-align: center;
+font-size: 25pt;
+font-weight: bold;
+margin-top: 40px;
+float: left;
+padding: 0px;
+margin-top: 28px;
+color: white;
+position: relative;
+top: -24px;
+left: 10px;
 
 }
 
@@ -183,17 +191,18 @@ p{
 	margin-top: 3px;
 }
 .check {
+	color: white;
     text-align:center;
     font-size:20pt;
     font-weight:bold;
-    background-color:#999;
     border-radius:10px;
     max-width:40px;
     float:right;
     margin-right:20px;
 }
 
-
-.melon {
-    background-image: icons-sliced_03.png;
+.item img{
+	position: absolute;
+	top: 20px;
+	left: 32%;
 }
